logs/webmux.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webmux'...
Compiling './lib/python3.5/site-packages/webmux/protocols.py'...
***   File "./lib/python3.5/site-packages/webmux/protocols.py", line 31
    print "No data for sync: %s %s" % (namespace, method)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webmux/pubsub.py'...
***   File "./lib/python3.5/site-packages/webmux/pubsub.py", line 22
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webmux/sftp.py'...
***   File "./lib/python3.5/site-packages/webmux/sftp.py", line 55
    print 'File created'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webmux/static'...
Listing './lib/python3.5/site-packages/webmux/static/css'...
Listing './lib/python3.5/site-packages/webmux/static/css/bootstrap'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro/eot'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro/svg'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro/woff'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro/woff/otf'...
Listing './lib/python3.5/site-packages/webmux/static/css/fonts/source-code-pro/woff/ttf'...
Listing './lib/python3.5/site-packages/webmux/static/img'...
Listing './lib/python3.5/site-packages/webmux/static/js'...
Listing './lib/python3.5/site-packages/webmux/static/js/collections'...
Listing './lib/python3.5/site-packages/webmux/static/js/libs'...
Listing './lib/python3.5/site-packages/webmux/static/js/libs/bootstrap'...
Listing './lib/python3.5/site-packages/webmux/static/js/models'...
Listing './lib/python3.5/site-packages/webmux/static/js/views'...
Listing './lib/python3.5/site-packages/webmux/templates'...
Compiling './lib/python3.5/site-packages/webmux/web_terminal.py'...
***   File "./lib/python3.5/site-packages/webmux/web_terminal.py", line 19
    print "lose connection"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webmux-0.1.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
